--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <label for="pesan" class="form-label">Pesan</label>
                 <textarea class="form-control" id="pesan" rows="3"></textarea>
               </div>
-              <button type="submit" class="btn btn-warning text-white"><i class="bi bi-caret-right-fill text-danger"> </i>Kirim</button>
+              <button type="submit" class="btn btn-primary text-white"><i class="bi bi-caret-right-fill text-danger"> </i>Kirim</button>
             </form>
           </div>
         </div>
