merubah tulisan pekerjaan

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section class="jumbotron text-center">
       <img src="img/Gua.jpg" alt="Wahyu Gandhi Saputra" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Wahyu Gandhi Saputra</h1>
-      <p class="lead">Mahasiswa | Belum Bekerja</p>
+      <p class="lead">Mahasiswa | Pekerja</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
